# ex

./: CMakeLists.txt  Ответы  Тестирование
inc/: board.h  bootloader.h  config.h  flash.h  gpio.h  hardware_arch.h  main.h  main_handler.h  modb_crc.h  modbus.h  modbus_registers.h  timers.h  uart.h  watchdog.h
src/: main.c  main_handler.c
